salesforce_sfdx/main/default/objects/Application_Task__c/fields/Actual_Completion_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date_And_Time__c</fullName>
    <label>Actual Completion Date And Time</label>
    <type>DateTime</type>
</CustomField>