salesforce_sfdx/main/default/objects/Application_Task__c/fields/Advisory_in_Area_Info__c.field-meta.xml
<CustomField>
    <fullName>Advisory_in_Area_Info__c</fullName>
    <label>Advisory in Area Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>