salesforce_sfdx/main/default/objects/Application_Task__c/fields/Annual_Average_of_Billed_Demand__c.field-meta.xml
<CustomField>
    <fullName>Annual_Average_of_Billed_Demand__c</fullName>
    <formula>Application__r.vlocity_cmt__AccountId__r.CE_Annual_Average_of_Billed_Demand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Average of Billed Demand</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>