salesforce_sfdx/main/default/objects/Application_Task__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>vlocity_cmt__Application__c</referenceTo>
    <relationshipLabel>Application Tasks</relationshipLabel>
    <relationshipName>Application_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>