salesforce_sfdx/main/default/objects/Application_Task__c/fields/Application_Approved_for_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Approved_for_Payment_Date__c</fullName>
    <formula>Application__r.Payment_Approval_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Approved for Payment Date</label>
    <type>Date</type>
</CustomField>