salesforce_sfdx/main/default/objects/Application_Task__c/fields/Application_Contractor_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Application_Contractor_Contact_Phone__c</fullName>
    <formula>Application__r.Contractor_Primary_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Contractor Contact Phone</label>
    <type>Text</type>
</CustomField>