salesforce_sfdx/main/default/objects/Application_Task__c/fields/Application_Owner__c.field-meta.xml
<CustomField>
    <fullName>Application_Owner__c</fullName>
    <formula>Application__r.Owner:User.FirstName &amp; " " &amp; Application__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>