salesforce_sfdx/main/default/objects/Application_Task__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <formula>TEXT( Application__r.vlocity_cmt__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>