salesforce_sfdx/main/default/objects/Application_Task__c/fields/Application_Submitted_for_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_for_Approval_Date__c</fullName>
    <formula>Application__r.Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Submitted for Approval Date</label>
    <type>Date</type>
</CustomField>