salesforce_sfdx/main/default/objects/Application_Task__c/fields/Application_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Task_Type__c</fullName>
    <label>Application Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Review</fullName>
            </value>
            <value>
                <fullName>Initial Technical Review</fullName>
            </value>
            <value>
                <fullName>Pre-Inspection</fullName>
            </value>
            <value>
                <fullName>Pre-Inspection Cure Action (MR1)</fullName>
            </value>
            <value>
                <fullName>Post Inspection</fullName>
            </value>
            <value>
                <fullName>Post Inspection Cure Action (MR2)</fullName>
            </value>
            <value>
                <fullName>Final Engineering Review</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
            <value>
                <fullName>FIOL Send</fullName>
            </value>
            <value>
                <fullName>SOW Change Mid Review</fullName>
            </value>
            <value>
                <fullName>SOW Pre-Inspection</fullName>
            </value>
            <value>
                <fullName>QAQC Pre-Inspection</fullName>
            </value>
            <value>
                <fullName>QAQC Post-Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>