salesforce_sfdx/main/default/objects/Application_Task__c/fields/Approved_Deliverable_Date_MV__c.field-meta.xml
<CustomField>
    <fullName>Approved_Deliverable_Date_MV__c</fullName>
    <label>Approved Deliverable Date - M&amp;V</label>
    <type>Date</type>
</CustomField>