salesforce_sfdx/main/default/objects/Application_Task__c/fields/Assigned_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Tasks</relationshipLabel>
    <relationshipName>Application_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>