salesforce_sfdx/main/default/objects/Application_Task__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Building_Type</valueSetName>
    </valueSet>
</CustomField>