salesforce_sfdx/main/default/objects/Application_Task__c/fields/C_I_Eligible__c.field-meta.xml
<CustomField>
    <fullName>C_I_Eligible__c</fullName>
    <formula>TEXT( Application__r.vlocity_cmt__AccountId__r.CE_C_I_Eligible__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C&amp;I Eligible</label>
    <type>Text</type>
</CustomField>