salesforce_sfdx/main/default/objects/Application_Task__c/fields/Con_Edison_M_V_Lead__c.field-meta.xml
<CustomField>
    <fullName>Con_Edison_M_V_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Con Edison M&amp;V Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_TasksXzh8</relationshipName>
    <type>Lookup</type>
</CustomField>