salesforce_sfdx/main/default/objects/Application_Task__c/fields/Cooling_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Cooling_System_Type__c</fullName>
    <label>Cooling System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cooling_System_Type</valueSetName>
    </valueSet>
</CustomField>