salesforce_sfdx/main/default/objects/Application_Task__c/fields/COVID_19_Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Testing_Required__c</fullName>
    <label>COVID-19 Testing Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>