salesforce_sfdx/main/default/objects/Application_Task__c/fields/Cured_Date__c.field-meta.xml
<CustomField>
    <fullName>Cured_Date__c</fullName>
    <label>Cured Date</label>
    <type>Date</type>
</CustomField>