salesforce_sfdx/main/default/objects/Application_Task__c/fields/Delay_MV__c.field-meta.xml
<CustomField>
    <fullName>Delay_MV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delay - M&amp;V</label>
    <type>Checkbox</type>
</CustomField>