salesforce_sfdx/main/default/objects/Application_Task__c/fields/Delay_Start_Date_MV__c.field-meta.xml
<CustomField>
    <fullName>Delay_Start_Date_MV__c</fullName>
    <label>Delay Start Date - M&amp;V</label>
    <type>Date</type>
</CustomField>