salesforce_sfdx/main/default/objects/Application_Task__c/fields/Delay_Started_Date_CP__c.field-meta.xml
<CustomField>
    <fullName>Delay_Started_Date_CP__c</fullName>
    <label>Delay Started Date - CP</label>
    <type>Date</type>
</CustomField>