salesforce_sfdx/main/default/objects/Application_Task__c/fields/Delays_Notes_CP__c.field-meta.xml
<CustomField>
    <fullName>Delays_Notes_CP__c</fullName>
    <label>Delays Notes - CP</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>