salesforce_sfdx/main/default/objects/Application_Task__c/fields/Deliverable_Status_Notes_CP__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Status_Notes_CP__c</fullName>
    <label>Deliverable Status Notes - CP</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>