salesforce_sfdx/main/default/objects/Application_Task__c/fields/Discrepancy_3__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_3__c</fullName>
    <label>Discrepancy 3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Discrepancy_Category_3__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Application_Task_Discrepancy</valueSetName>
    </valueSet>
</CustomField>