salesforce_sfdx/main/default/objects/Application_Task__c/fields/Discrepancy_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Category_2__c</fullName>
    <label>Discrepancy Category 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Task_Discrepancy_Category</valueSetName>
    </valueSet>
</CustomField>