salesforce_sfdx/main/default/objects/Application_Task__c/fields/Documentation_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Review Complete</label>
    <type>Checkbox</type>
</CustomField>