salesforce_sfdx/main/default/objects/Application_Task__c/fields/Documentation_Review_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Review_Complete_Date__c</fullName>
    <label>Documentation Review Complete Date</label>
    <type>Date</type>
</CustomField>