salesforce_sfdx/main/default/objects/Application_Task__c/fields/Documents_Used_for_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Documents_Used_for_Inspection__c</fullName>
    <label>Documents Used for Inspection</label>
    <length>510</length>
    <type>LongTextArea</type>
</CustomField>