salesforce_sfdx/main/default/objects/Application_Task__c/fields/Engineering_Lead__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_TasksY6bv</relationshipName>
    <type>Lookup</type>
</CustomField>