salesforce_sfdx/main/default/objects/Application_Task__c/fields/Estimated_Completion_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date_and_Time__c</fullName>
    <label>Estimated Completion Date and Time</label>
    <type>DateTime</type>
</CustomField>