salesforce_sfdx/main/default/objects/Application_Task__c/fields/Estimated_Duration_h__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_h__c</fullName>
    <formula>(Estimated_Completion_Date_and_Time__c - Scheduled_Date_and_Time__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Duration (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>