salesforce_sfdx/main/default/objects/Application_Task__c/fields/Existing_Fuel_Types__c.field-meta.xml
<CustomField>
    <fullName>Existing_Fuel_Types__c</fullName>
    <label>Existing Fuel Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CE Natural Gas</fullName>
            </value>
            <value>
                <fullName>Other Natural Gas</fullName>
            </value>
            <value>
                <fullName>CE Steam</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>