salesforce_sfdx/main/default/objects/Application_Task__c/fields/Expected_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Project_Start_Date__c</fullName>
    <formula>Application__r.Expected_Project_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Project Start Date</label>
    <type>Date</type>
</CustomField>