salesforce_sfdx/main/default/objects/Application_Task__c/fields/FaceProtection__c.field-meta.xml
<CustomField>
    <fullName>FaceProtection__c</fullName>
    <label>FaceProtection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>