salesforce_sfdx/main/default/objects/Application_Task__c/fields/Field_Verification_Findings__c.field-meta.xml
<CustomField>
    <fullName>Field_Verification_Findings__c</fullName>
    <inlineHelpText>Summary of Detailed Findings / Main Issues</inlineHelpText>
    <label>Field Verification Findings</label>
    <type>TextArea</type>
</CustomField>