salesforce_sfdx/main/default/objects/Application_Task__c/fields/Final_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Incentive_Amount__c</fullName>
    <label>Final Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>