salesforce_sfdx/main/default/objects/Application_Task__c/fields/Final_Peer_Review_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Peer_Review_Assignment_Date__c</fullName>
    <label>Final Peer Review Assignment Date</label>
    <type>Date</type>
</CustomField>