salesforce_sfdx/main/default/objects/Application_Task__c/fields/Final_Peer_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Final_Peer_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Peer Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tasks6</relationshipName>
    <type>Lookup</type>
</CustomField>