salesforce_sfdx/main/default/objects/Application_Task__c/fields/Final_Steam_Savings_Mlbs__c.field-meta.xml
<CustomField>
    <fullName>Final_Steam_Savings_Mlbs__c</fullName>
    <label>Final Steam Savings (Mlbs)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>