salesforce_sfdx/main/default/objects/Application_Task__c/fields/Final_Technical_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Final_Technical_Review_Notes__c</fullName>
    <label>Final Technical Review Notes</label>
    <type>TextArea</type>
</CustomField>