salesforce_sfdx/main/default/objects/Application_Task__c/fields/Final_Therm_Savings__c.field-meta.xml
<CustomField>
    <fullName>Final_Therm_Savings__c</fullName>
    <label>Final Therm Savings</label>
    <length>30</length>
    <type>Text</type>
</CustomField>