salesforce_sfdx/main/default/objects/Application_Task__c/fields/Found_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Found_Conditions__c</fullName>
    <label>Found Conditions</label>
    <type>TextArea</type>
</CustomField>