salesforce_sfdx/main/default/objects/Application_Task__c/fields/General_Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Project_Notes__c</fullName>
    <label>General Project Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>