salesforce_sfdx/main/default/objects/Application_Task__c/fields/Have_you_already_started_construction__c.field-meta.xml
<CustomField>
    <fullName>Have_you_already_started_construction__c</fullName>
    <label>Have you already started construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>