salesforce_sfdx/main/default/objects/Application_Task__c/fields/Initial_KWh_Savings__c.field-meta.xml
<CustomField>
    <fullName>Initial_KWh_Savings__c</fullName>
    <label>Initial KWh Savings</label>
    <length>30</length>
    <type>Text</type>
</CustomField>