salesforce_sfdx/main/default/objects/Application_Task__c/fields/Initial_Lifetime_Savings_LMMBTU__c.field-meta.xml
<CustomField>
    <fullName>Initial_Lifetime_Savings_LMMBTU__c</fullName>
    <label>Initial Lifetime Savings (LMMBTU)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>