salesforce_sfdx/main/default/objects/Application_Task__c/fields/Initial_Peer_Review_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Peer_Review_Assignment_Date__c</fullName>
    <label>Initial Peer Review Assignment Date</label>
    <type>Date</type>
</CustomField>