salesforce_sfdx/main/default/objects/Application_Task__c/fields/Initial_QAQC_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Initial_QAQC_Contact_Attempt__c</fullName>
    <label>Initial QAQC Contact Attempt</label>
    <type>Date</type>
</CustomField>