salesforce_sfdx/main/default/objects/Application_Task__c/fields/Initial_Technical_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Technical_Review_Notes__c</fullName>
    <label>Initial Technical Review Notes</label>
    <type>TextArea</type>
</CustomField>