salesforce_sfdx/main/default/objects/Application_Task__c/fields/Initial_Technical_Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Initial_Technical_Review_Result__c</fullName>
    <label>Initial Technical Review Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Cure</fullName>
            </value>
            <value>
                <fullName>Flag</fullName>
            </value>
            <value>
                <fullName>Discrepancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>