salesforce_sfdx/main/default/objects/Application_Task__c/fields/Inspection_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Assignment_Date__c</fullName>
    <label>Inspection Assignment Date</label>
    <type>Date</type>
</CustomField>