salesforce_sfdx/main/default/objects/Application_Task__c/fields/Inspection_Category__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Category__c</fullName>
    <label>Inspection Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Desk Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>