salesforce_sfdx/main/default/objects/Application_Task__c/fields/Inspection_Result__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Result__c</fullName>
    <label>Inspection Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Cured</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>