salesforce_sfdx/main/default/objects/Application_Task__c/fields/Inspection_Site_Visit_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Site_Visit_Completion_Date__c</fullName>
    <label>Inspection Site Visit Completion Date</label>
    <type>Date</type>
</CustomField>