salesforce_sfdx/main/default/objects/Application_Task__c/fields/M_V_Contractor_Lead_Email_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>M_V_Contractor_Lead_Email_Contact_Info__c</fullName>
    <label>M&amp;V Contractor Lead Email / Contact Info</label>
    <type>TextArea</type>
</CustomField>