salesforce_sfdx/main/default/objects/Application_Task__c/fields/M_V_Contractor_Performance_MV__c.field-meta.xml
<CustomField>
    <fullName>M_V_Contractor_Performance_MV__c</fullName>
    <description>Choose a description of the overall performance of the contractor</description>
    <inlineHelpText>Choose a description of the overall performance of the contractor</inlineHelpText>
    <label>M&amp;V Contractor Performance - M&amp;V</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Exceptional</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>