salesforce_sfdx/main/default/objects/Application_Task__c/fields/M_V_Contractor_Performance_Notes_MV__c.field-meta.xml
<CustomField>
    <fullName>M_V_Contractor_Performance_Notes_MV__c</fullName>
    <label>M&amp;V Contractor Performance Notes - M&amp;V</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>