salesforce_sfdx/main/default/objects/Application_Task__c/fields/M_V_Contrator__c.field-meta.xml
<CustomField>
    <fullName>M_V_Contrator__c</fullName>
    <description>M&amp;V vendor assigned to project</description>
    <label>M&amp;V Contrator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warren</fullName>
            </value>
            <value>
                <fullName>Cadmus</fullName>
            </value>
            <value>
                <fullName>kW Engineering</fullName>
            </value>
            <value>
                <fullName>TRC</fullName>
            </value>
            <value>
                <fullName>SWA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>