salesforce_sfdx/main/default/objects/Application_Task__c/fields/M_V_ON_HOLD_Details__c.field-meta.xml
<CustomField>
    <fullName>M_V_ON_HOLD_Details__c</fullName>
    <label>M&amp;V ON HOLD Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>