salesforce_sfdx/main/default/objects/Application_Task__c/fields/M_V_Plan_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>M_V_Plan_Requested_Date__c</fullName>
    <formula>Application__r.M_V_Plan_Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M&amp;V Plan Requested Date</label>
    <type>Date</type>
</CustomField>