salesforce_sfdx/main/default/objects/Application_Task__c/fields/M_V_Pre_Inspection_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>M_V_Pre_Inspection_Request_Date__c</fullName>
    <label>M&amp;V Pre-Inspection Request Date</label>
    <type>Date</type>
</CustomField>