salesforce_sfdx/main/default/objects/Application_Task__c/fields/MR1_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>MR1_Incentive_Amount__c</fullName>
    <label>MR1 Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>