salesforce_sfdx/main/default/objects/Application_Task__c/fields/MR1_Steam_Savings__c.field-meta.xml
<CustomField>
    <fullName>MR1_Steam_Savings__c</fullName>
    <label>MR1 Steam Savings (Mlbs)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>