salesforce_sfdx/main/default/objects/Application_Task__c/fields/MR2_KW_savings__c.field-meta.xml
<CustomField>
    <fullName>MR2_KW_savings__c</fullName>
    <label>MR2 KW savings</label>
    <length>30</length>
    <type>Text</type>
</CustomField>