salesforce_sfdx/main/default/objects/Application_Task__c/fields/MR2_Lifetime_Savings_LMMBTU__c.field-meta.xml
<CustomField>
    <fullName>MR2_Lifetime_Savings_LMMBTU__c</fullName>
    <label>MR2 Lifetime Savings (LMMBTU)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>