salesforce_sfdx/main/default/objects/Application_Task__c/fields/MR2_Therm_Savings__c.field-meta.xml
<CustomField>
    <fullName>MR2_Therm_Savings__c</fullName>
    <label>MR2 Therm Savings</label>
    <length>30</length>
    <type>Text</type>
</CustomField>