salesforce_sfdx/main/default/objects/Application_Task__c/fields/MV_Contractor_Deliverable_Assigned_MV__c.field-meta.xml
<CustomField>
    <fullName>MV_Contractor_Deliverable_Assigned_MV__c</fullName>
    <label>M&amp;V Contractor Deliverable Assigned -M&amp;V</label>
    <type>Date</type>
</CustomField>