salesforce_sfdx/main/default/objects/Application_Task__c/fields/Operations_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operations_Review_Notes__c</fullName>
    <label>Operations Review Notes</label>
    <type>TextArea</type>
</CustomField>