salesforce_sfdx/main/default/objects/Application_Task__c/fields/Original_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Project_Owner__c</fullName>
    <formula>Application__r.Owner:User.FirstName + " " +  Application__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Project Owner</label>
    <type>Text</type>
</CustomField>