salesforce_sfdx/main/default/objects/Application_Task__c/fields/Partner_Project__c.field-meta.xml
<CustomField>
    <fullName>Partner_Project__c</fullName>
    <label>Partner Project(s)</label>
    <type>TextArea</type>
</CustomField>