salesforce_sfdx/main/default/objects/Application_Task__c/fields/Payee_Check_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Check_Name__c</fullName>
    <formula>Application__r.Payee_Check_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Check Name</label>
    <type>Text</type>
</CustomField>