salesforce_sfdx/main/default/objects/Application_Task__c/fields/Payee_City__c.field-meta.xml
<CustomField>
    <fullName>Payee_City__c</fullName>
    <formula>Application__r.Payee_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee City</label>
    <type>Text</type>
</CustomField>