salesforce_sfdx/main/default/objects/Application_Task__c/fields/Payee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Payee_Phone__c</fullName>
    <formula>Application__r.Payee_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Phone</label>
    <type>Text</type>
</CustomField>