salesforce_sfdx/main/default/objects/Application_Task__c/fields/Post_Inspection_Cure_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Inspection_Cure_Assignment_Date__c</fullName>
    <label>Post-Inspection Cure Assignment Date</label>
    <type>Date</type>
</CustomField>